unpackaged/main/default/objects/Case/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Platform__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Management - Other</fullName>
            </value>
            <value>
                <fullName>Accounts Management - New User</fullName>
            </value>
            <value>
                <fullName>Admin - Jobs</fullName>
            </value>
            <value>
                <fullName>API - 3rd Party</fullName>
            </value>
            <value>
                <fullName>API - Accounts Management</fullName>
            </value>
            <value>
                <fullName>API - Configuration</fullName>
            </value>
            <value>
                <fullName>API - Customer</fullName>
            </value>
            <value>
                <fullName>API - General</fullName>
            </value>
            <value>
                <fullName>Availability Contract</fullName>
            </value>
            <value>
                <fullName>Backend Program Error</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Calculation / Logic</fullName>
            </value>
            <value>
                <fullName>Case Manager / Templates</fullName>
            </value>
            <value>
                <fullName>Communication Loss - Internal</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Configuration - Data Logger</fullName>
            </value>
            <value>
                <fullName>Configuration - Missing Object</fullName>
            </value>
            <value>
                <fullName>Configuration - PI AF / SQL</fullName>
            </value>
            <value>
                <fullName>Customer Contract Terms</fullName>
            </value>
            <value>
                <fullName>Custom Projects / Solutions</fullName>
            </value>
            <value>
                <fullName>Communication Loss - Customer</fullName>
            </value>
            <value>
                <fullName>Configuration - Customer</fullName>
            </value>
            <value>
                <fullName>Customer - General Info / Documentation / Training</fullName>
            </value>
            <value>
                <fullName>Customer - Invalid Input Data</fullName>
            </value>
            <value>
                <fullName>Customer - Site Level</fullName>
            </value>
            <value>
                <fullName>Data - Historical - Backfill / Reconstruction</fullName>
            </value>
            <value>
                <fullName>Data - Historical - Missing / Invalid</fullName>
            </value>
            <value>
                <fullName>Data - Live</fullName>
            </value>
            <value>
                <fullName>Data - Raw - Extraction</fullName>
            </value>
            <value>
                <fullName>Data Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>