unpackaged/main/default/objects/Case/fields/CSAT_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Survey_Link__c</fullName>
    <label>CSAT Survey Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>