unpackaged/main/default/objects/Case/fields/Junk__c.field-meta.xml
<CustomField>
    <fullName>Junk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Support rep can check the junk case checkbox</description>
    <label>Junk</label>
    <type>Checkbox</type>
</CustomField>