unpackaged/main/default/objects/Case/fields/Legacy_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Case_Number__c</fullName>
    <label>Legacy Case Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>