unpackaged/main/default/objects/Case/fields/Number_of_Plants_Affected__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Plants_Affected__c</fullName>
    <label>Number of Plants Affected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>