unpackaged/main/default/objects/Case/fields/PF_Legacy_SFDC_Id__c.field-meta.xml
<CustomField>
    <fullName>PF_Legacy_SFDC_Id__c</fullName>
    <externalId>true</externalId>
    <label>PF Legacy SFDC Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>