unpackaged/main/default/objects/Case/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bluepoint</fullName>
            </value>
            <value>
                <fullName>Breeze development</fullName>
            </value>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>Drive O&amp;M</fullName>
            </value>
            <value>
                <fullName>Edge Services</fullName>
            </value>
            <value>
                <fullName>Ekhosoft</fullName>
            </value>
            <value>
                <fullName>General and PF Community</fullName>
            </value>
            <value>
                <fullName>Greenbyte</fullName>
            </value>
            <value>
                <fullName>Other Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>