unpackaged/main/default/objects/Case/fields/Reference_Link__c.field-meta.xml
<CustomField>
    <fullName>Reference_Link__c</fullName>
    <label>Reference Link</label>
    <type>Url</type>
</CustomField>