unpackaged/main/default/objects/Case/fields/Reporting_or_Revenue_Impacting__c.field-meta.xml
<CustomField>
    <fullName>Reporting_or_Revenue_Impacting__c</fullName>
    <label>Reporting or Revenue Impacting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>