unpackaged/main/default/objects/Case/fields/Ticket_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Assignee__c</fullName>
    <label>Ticket Assignee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>