unpackaged/main/default/objects/Case/fields/Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Time_Stamp__c</fullName>
    <label>Time Stamp</label>
    <type>DateTime</type>
</CustomField>