unpackaged/main/default/objects/Case/validationRules/Contact_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Contact.Id)</errorConditionFormula>
    <errorMessage>Contact cannot be blank. Please add and Save.</errorMessage>
</ValidationRule>