unpackaged/main/default/objects/Case/validationRules/Type_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(TEXT( Type) )</errorConditionFormula>
    <errorMessage>Type cannot be blank.</errorMessage>
</ValidationRule>