unpackaged/main/default/objects/Case/validationRules/When_junk_is_false.validationRule-meta.xml
<ValidationRule>
    <fullName>When_junk_is_false</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Junk__c = False ,
ISPICKVAL( Status , &quot;Closed&quot;),
OR(
ISBLANK( TEXT( Reason )),

ISBLANK( Purchased_Product__c )
))</errorConditionFormula>
    <errorMessage>Please update the case reason and Purchased Product before closing the case.</errorMessage>
</ValidationRule>