unpackaged/main/default/objects/Case/validationRules/When_Junk_is_TRUE.validationRule-meta.xml
<ValidationRule>
    <fullName>When_Junk_is_TRUE</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Junk__c = TRUE,
NOT(  ISBLANK(TEXT( Reason) )),
NOT( ISBLANK( Purchased_Product__c ))  
)</errorConditionFormula>
    <errorMessage>Update Case Reason Field</errorMessage>
</ValidationRule>