unpackaged/main/default/objects/Case/listViews/BluePoint_Case.listView-meta.xml
<ListView>
    <fullName>BluePoint_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>BluePoint</label>
    <queue>BluePoint</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>