unpackaged/main/default/objects/Case/listViews/Breeze_Development_Case.listView-meta.xml
<ListView>
    <fullName>Breeze_Development_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Breeze Development</label>
    <queue>Breeze_Development</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>