unpackaged/main/default/objects/Case/listViews/Drive_Case.listView-meta.xml
<ListView>
    <fullName>Drive_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Drive</label>
    <queue>Drive</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>