unpackaged/main/default/objects/Case/listViews/Drive_O_M_Case.listView-meta.xml
<ListView>
    <fullName>Drive_O_M_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Drive O &amp; M</label>
    <queue>Drive_O_M</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>