unpackaged/main/default/objects/Case/listViews/Ekhosoft_Case.listView-meta.xml
<ListView>
    <fullName>Ekhosoft_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Ekhosoft</label>
    <queue>Ekhosoft</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>