unpackaged/main/default/objects/Case/listViews/Email_Support_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Email_Support_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Email Support Queue</label>
    <queue>Email_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>