unpackaged/main/default/objects/Case/listViews/Greenbyte_Case.listView-meta.xml
<ListView>
    <fullName>Greenbyte_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Greenbyte</label>
    <queue>Greenbyte</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>