unpackaged/main/default/objects/Case/listViews/Junk_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Junk_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Junk Queue</label>
    <queue>Junk_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>