unpackaged/main/default/objects/Case/listViews/Phone_Support_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Phone_Support_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Phone Support Queue</label>
    <queue>Phone_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>