unpackaged/main/default/objects/Case/listViews/Swarm_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Swarm_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Swarm Queue</label>
    <queue>Swarm_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>