unpackaged/main/default/objects/Case/listViews/Vacation_List_View.listView-meta.xml
<ListView>
    <fullName>Vacation_List_View</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Vacation</label>
</ListView>